# Assets-Production

./: .dockerignore  .emacs  .gitignore  .travis.yml  021.nsi  CMakeLists.txt  CelesteStory.txt  Dockerfile  FICTION  IntroMonologue.txt  Makefile  README  battle.m3u  blank.system  blank2.system  blank_r.system  blank_x.system  blank_y.system  borken.py  builddatarpm  car.system  cargo_modify.py  cities.txt  config.json  config.py  controls.json  convert.py  cunerpicus.system  factions.xls  factions.xml  geforce2.config  install.bat  jtest.mission  lineup.mission  linux_vegastrike-0.2.9.sh  mars_station.system  master_asteroid_list.json  master_component_list.json  master_part_list.csv  master_part_list.json  (+51 more)
.github/: pull_request_template.md
.vegastrike/: battle.m3u  carribean.m3u  ice.m3u  industrial.m3u  launch.m3u  loss.m3u  panic.m3u  peace.m3u  unit.m3u  unit_pirate.m3u  victory.m3u
.xvpics/: eject.alp  radar.alp  rapier-top.alp  selectbox.alp
History_and_backstory/: Excerpts_from_the_Ivan_kltakln_guidebook.txt
accounts/: default.xml  test1.save  test1.xml  test2.save
ai/: VegaEvents.csv
animations/: Makefile.am
bases/: AsteroidFighterBase.py  Lava.py  MiningBase.xbase  MiningBase__rlaan.py  NEW_BASE.py  Snow.py  Snow_lib.py  Snow_sunset.py  Starfortress.py  aera_lib.py  agriculture_lib.py  bar-ok.py  bar_lib.py  bartender.py  bartender_mining.py  bartender_union.py  bartender_university.py  carribean.py  commerce_center.py  computer_lib.py  fighter_barracks.py  fixers.py  fleetcarrier.py  forest.py  gas_giant.py  gas_lib.py  guilds.py  industrial_lib.py  launch_music_lib.py  m_class.py  m_class_day.py  m_class_night.py  main_menu.py  ocean_lib.py  planet.xbase  planet_lib.py  rock.py  room.py  starfortress.py  unit.py  (+3 more)
bomber-cockpit.cpt/: armorf.spr  auto.spr  bomber-cockpit.cpt  cockpit-bomber.xmesh  crosshairs.spr
centurion-cockpit.cpt/: auto.alp  centurion-cockpit-back.spr  centurion-cockpit-right.spr  centurion-cockpit.cpt  centurion-cockpit.spr  locklight.alp  locklight.spr
cgi-accountserver/: accountserver.py  db.py  register_submit.py  settings.sample.py
communications/: aera.xml  aeran_merchant_marine.xml  andolian_citizen.xml  andoliantoprivateer.xml  confed.xml  forsaken_citizen.xml  highborn_citizen.xml  hunter.xml  iso.xml  merchant.xml  merchant_guild.xml  militia.xml  neutral.xml  pirate.xml  retro_shouldnotbeused.xml  rlaan.xml  rlaan_citizen.xml  shaper.xml  unadorned.xml
demdata/: gc16at64.raw  pyramid.xmesh  pyramids.txt
disabled-cockpit.cpt/: cockpit.xmesh  disabled-cockpit.cpt  locklight.alp  lvdu.spr  mvdu.spr  radar.alp  radar.spr
documentation/: Development_Graphics_Requirements-VsWiki.html  README.txt  description.xunit  readme.txt
enigma_sector/: enigma.system  heavens_gate.system  klondike.system  niven.system
excalibur-cockpit.cpt/: armorf.alp  blasterpower.alp  crosshairs.spr  excalibur-cockpit.cpt  locklight.alp  locklight.spr
ferret-cockpit.cpt/: auto.alp  blasterpower.spr  crosshairs.spr  ferret-cockpit.cpt  ferret-cockpit.spr  ferret-cockpitback.spr  ferret-cockpitleft.spr  fuelstat.spr  rvdu.spr
force_feedback/: vegastrike.ifr
gemini_sector/: 119ce.system  17-ar.system  41-gs.system  44-p-im.system  aldebran.system  auriga.system  blockadepointalpha.system  blockadepointcharlie.system  blockadepointtango.system  capella.system  castor.system  cm-n1054.system  cmf-a.system  crab-12.system  death.system  dn-n1912.system  eden.system  famine.system  freyja.system  hindsvariablen.system  hyades.system  j900.system  junction.system  km-252.system  lisacc.system  mahrahn.system  metsor.system  midgard.system  nd-57.system  newcaledonia.system  newcastle.system  newconstantinople.system  newdetroit.system  nexus.system  nitir.system  oxford.system  padre.system  palan.system  pendersstar.system  pentonville.system  (+24 more)
heavy-cockpit.cpt/: heavy-cockpit.cpt
hellcat-cockpit.cpt/: armorf.alp  armorl.alp  auto.alp  crosshairs.spr  fuelstat.alp  hellcat-cockpit.cpt  hellcat-cockpit.spr  shieldl.alp  shieldl.spr
hornet-cockpit.cpt/: hornet-cockpit.cpt
light_cockpit.cpt/: jumppower.spr  light_cockpit.cpt
medium_cockpit.cpt/: cockpit-medium.xmesh  medium_cockpit.cpt  shieldf.spr
meshes/: ast1.xmesh  ast2.xmesh  atmShalo.xmesh  atmXatm.xmesh  box.xmesh  cargo01-Frame.xmesh  cargo01-Sides.xmesh  cargo01.xmesh  ice1.xmesh  sphere.xmesh  star4.xmesh  tri.xmesh
mission/: asteroid1.mission  attack.mission  bomber.mission  bounty.mission  capship.mission  car.mission  cargo.mission  cargo6.mission  contraband.mission  cunerpicus_test.mission  dec.mission  drone_duel.mission  earth_defend_cruiser1.mission  earth_defend_cruiser2.mission  earth_defender1.mission  earth_patrol1.mission  earth_patrol_rnd_attack1.mission  earth_patrol_rnd_attack2.mission  escort.mission  explore_universe2.mission  explore_universe_aevant.mission  explore_universe_dagger.mission  explore_universe_neutral.mission  explore_universe_nova.mission  faceoff.mission  fleet_attack_through_jumpgate1.mission  hq_defend1.mission  internal1.mission  internal2.mission  invisible_battle.mission  main_menu.mission  modelview.mission  nebula_tag.mission  patrol.mission  planetary_jump_patrol1.mission  proving_grounds.mission  room.mission  ships_confed1.mission  ships_confed2.mission  station_cruiser_defend2.mission  (+8 more)
mission_sector/: alienearth.system  proving_grounds.system
modules/: GUI.py  PickleTools.py  ShowProgress.py  (+159 more)
python/settings_app/: app_config.py  config_data.py  config_to_gui.py  game_config.py  key_utils.py  main_app.py  main_window.py  os_utils.py  pyproject.toml  readme.txt  sa_os.py  settings_app.py  setup_folders.py
python/settings_app/graphics_factory/: breadcrumbs.py  clickable_label.py  collapsible.py  config_pane.py  divider.py  file_dialog.py  graphic_attributes.py  label_control_pair.py  scrollable_frame.py  tooltip.py
python/settings_app/tabs/: advanced.py  audio.py  bindings.py  controls.py  graphics.py  performance.py
python/settings_app/templates/: advanced_template.json  main_template.json  resolutions.json  schema.json
(+3861 files in other folders)
